  <resources>
    <string name="app_name">Spotify Streamer</string>


    <!--Toasts-->

    <string name="toast_no_artist_found">No artists found that match the given search term. Please refine search.</string>
    <string name="toast_no_track_found">No top tracks found for that artist.</string>
    <string name="toast_track_not_playable">There is no preview for this track</string>
    <string name="toast_no_network_found">Can\'t find a network connection.</string>
    <string name="toast_no_more_tracks">There are no more top tracks from this artist.</string>


    <!-- Label for the country preference [CHAR LIMIT=30] -->
    <string name="pref_country_label">Country</string>

    <!-- Summary for the country preference [CHAR LIMIT=30] -->
    <string name="pref_country_summary">Enter a country to search for top tracks</string>

    <!-- Key name for storing country in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_country_key" translatable="false">country</string>

    <!-- Default country preference [CHAR LIMIT=NONE] -->
    <string name="pref_country_default" translatable="false">US</string>


    <!--Titles-->

    <string name="title_activity_top_tracks">Top 10 Tracks</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_track_player">TrackPlayerActivity</string>
    <string name="action_settings">Settings</string>

    <!--TrackPlayerDialogFragment-->

    <string name="artist">No Name</string>
    <string name="album">Untitled</string>
    <string name="song">Untitled</string>
    <string name="elapsed_time">0:00</string>
    <string name="time_left">0:30</string>

    <!--Image Button Content Descriptions-->

    <string name="track_player_previous">Previous Track</string>
    <string name="track_player_next">Next Track</string>
    <string name="track_player_play">Play Track</string>
    <string name="track_player_pause">Pause Track</string>
    <string name="track_player_album_art">Album Art</string>

    <!--Content Authority-->
    <string name="content_authority">com.example.android.spotifystreamer</string>


</resources>
