<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="com.example.android.spotifystreamer.TrackPlayerDialogFragment"
    >

    <TextView
        android:id="@+id/track_player_artist"
        android:text="@string/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/track_player_album"
        android:text="@string/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <ImageView
        android:id="@+id/track_player_album_art"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"
        android:layout_weight="1"
        android:contentDescription="@string/track_player_album_art"/>

    <TextView
        android:id="@+id/track_player_song"
        android:text="@string/song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>


    <!--Set max of SeekBar to length of track previews (30 seconds = 30,000 milliseconds)-->
    <SeekBar
        android:id="@+id/track_player_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="30000"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/track_player_elapsed_time"
            android:text="@string/elapsed_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/track_player_time_left"
            android:text="@string/time_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/track_player_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/track_player_previous"
            android:src="@android:drawable/ic_media_previous"
            />
        <ImageButton
            android:id="@+id/track_player_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/track_player_pause"
            android:src="@drawable/play_pause_button"
            />
        <ImageButton
            android:id="@+id/track_player_next"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/track_player_next"
            android:src="@android:drawable/ic_media_next"
            />

    </LinearLayout>
</LinearLayout>
